--- a/style.css
+++ b/style.css
@@ -649,8 +649,8 @@ form.wpcf7-form {
 
 .trusted-partners {
   margin: 90px calc(-50vw + 50%);
-  background-color: rgba(216, 225, 251, 0.51);
-  padding: 3% 13%; }
+  background: rgba(57, 101, 238, 0.15);
+  padding: 5% 13%; }
   .trusted-partners .header-style-container {
     margin-bottom: 50px; }
 
@@ -1170,6 +1170,7 @@ h1 {
   color: #2e3438; }
   .single-content-container h2 {
     margin-bottom: 30px;
+    line-height: 1;
     text-align: center; }
   .single-content-container p, .single-content-container li {
     font-family: 'Century Gothic';
@@ -1622,7 +1623,8 @@ div.customer-story-box {
   opacity: 0.51;
   border-radius: 78px;
   -webkit-transform: translate(850px, 150px) rotate(43deg);
-          transform: translate(850px, 150px) rotate(43deg); }
+          transform: translate(850px, 150px) rotate(43deg);
+  background: rgba(57, 101, 238, 0.5); }
 
 .bottom-right-shapes .background-cover {
   height: 530px;
@@ -1662,7 +1664,8 @@ div.customer-story-box {
     border-radius: 78px;
     -webkit-transform: translate(-175px, -1050px) rotate(43deg);
             transform: translate(-175px, -1050px) rotate(43deg);
-    height: 600px; }
+    height: 600px;
+    background: rgba(57, 101, 238, 0.6); }
   .top-left-shapes .all-shapes-wrapper .background-cover {
     height: 530px;
     width: 100%;
@@ -1762,12 +1765,14 @@ div.customer-story-box {
   .front-page-shapes .all-shapes-wrapper .background-rec-bottom {
     -webkit-transform: translate(-400px, 2650px) rotate(-34deg);
             transform: translate(-400px, 2650px) rotate(-34deg);
-    height: 590px;
-    width: 2550px; }
+    height: 425px;
+    width: 2550px;
+    background: rgba(57, 101, 238, 0.44); }
   .front-page-shapes .all-shapes-wrapper .background-rec-bottom-two {
     -webkit-transform: translate(-625px, 3100px) rotate(53deg);
             transform: translate(-625px, 3100px) rotate(53deg);
-    height: 590px; }
+    height: 590px;
+    background: rgba(57, 101, 238, 0.44); }
 
 .what-we-offer-shapes .all-shapes-wrapper {
   position: absolute;
@@ -1810,3 +1815,45 @@ div.customer-story-box {
           transform: translate(0, 0);
   bottom: 0;
   height: 565px; }
+
+.info-session-bottom-right-shapes .all-shapes-wrapper {
+  position: absolute;
+  max-width: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  height: 650px;
+  z-index: -100; }
+
+.info-session-bottom-right-shapes .big-rec {
+  width: 1387px;
+  height: 779px;
+  background-color: #3965ee;
+  opacity: 0.15;
+  border-radius: 102px;
+  -webkit-transform: translate(500px, 950px) rotate(43deg);
+          transform: translate(500px, 950px) rotate(43deg); }
+
+.info-session-bottom-right-shapes .sm-rec {
+  width: 837px;
+  height: 529px;
+  background-color: #b6c4f5;
+  opacity: 0.51;
+  border-radius: 78px;
+  -webkit-transform: translate(850px, 350px) rotate(43deg);
+          transform: translate(850px, 350px) rotate(43deg);
+  background: rgba(57, 101, 238, 0.5); }
+
+.info-session-bottom-right-shapes .background-cover {
+  height: 530px;
+  width: 100%;
+  opacity: 0.51;
+  position: absolute;
+  left: 0;
+  background-color: #d8e1fb;
+  bottom: 0; }
+
+.info-session-bottom-right-shapes .background-cover-bottom {
+  -webkit-transform: translate(0, 697px);
+          transform: translate(0, 697px); }
